# TurkishMorphologicalDisambiguation-CPP

./: .gitignore  AutoDisambiguator.cpp  AutoDisambiguator.h  CMakeLists.txt  DisambiguatedWord.h  DisambiguationCorpus.cpp  DummyDisambiguation.cpp  HmmDisambiguation.cpp  HmmDisambiguation.h  LongestRootFirstDisambiguation.cpp  LongestRootFirstDisambiguation.h  MorphologicalDisambiguator.h  NaiveDisambiguation.cpp  NaiveDisambiguation.h  README.md  RootFirstClassifierDisambiguation.cpp  RootFirstClassifierDisambiguation.h  RootFirstDisambiguation.cpp  RootFirstDisambiguation.h  RootWordStatistics.cpp  RootWordStatistics.h  RootWordStatisticsDisambiguation.cpp  RootWordStatisticsDisambiguation.h  conanfile.py  conanfile.txt
AutoProcessor/ParseTree/PartOfSpeech/: PartOfSpeechDisambiguator.h  TurkishCCDisambiguator.cpp  TurkishCCDisambiguator.h  TurkishPartOfSpeechDisambiguator.cpp  TurkishPartOfSpeechDisambiguator.h
AutoProcessor/Sentence/: SentenceAutoDisambiguator.cpp  SentenceAutoDisambiguator.h  TurkishSentenceAutoDisambiguator.cpp  TurkishSentenceAutoDisambiguator.h
Test/: DisambiguationCorpusTest.cpp  DummyDisambiguationTest.cpp  HmmDisambiguationTest.cpp  LongestRootFirstDisambiguationTest.cpp  RootFirstDisambiguationTest.cpp  RootWordStatisticsDisambiguationTest.cpp  RootWordStatisticsTest.cpp
include/: AnnotatedPhrase.h  AnnotatedSentence.h  AnnotatedWord.h  Argument.h  ArgumentType.h  Attribute.h  AttributeType.h  AutoNER.h  BinaryAttribute.h  Bootstrap.h  Classifier.h  ConstituentSpan.h  Corpus.h  CounterHashMap.h  DataDefinition.h  DataSet.h  DependencyRelation.h  DiscreteAttribute.h  DiscreteDistribution.h  DiscreteFeaturesNotAllowed.h  Dummy.h  FeatureSubSet.h  FileDescription.h  Frame.h  FrameElement.h  FrameNet.h  Frameset.h  FramesetArgument.h  FramesetList.h  Gazetteer.h  Instance.h  InstanceList.h  IsLeafNode.h  IsTransferable.h  LayerInfo.h  Matrix.h  Model.h  NamedEntityType.h  Node.h  NodeDrawableCollector.h  (+20 more)
src/: AutoDisambiguator.cpp  AutoDisambiguator.h  CMakeLists.txt  DummyDisambiguation.cpp  DummyDisambiguation.h  HmmDisambiguation.cpp  HmmDisambiguation.h  LongestRootFirstDisambiguation.cpp  LongestRootFirstDisambiguation.h  MorphologicalDisambiguator.h  NaiveDisambiguation.cpp  NaiveDisambiguation.h  RootFirstDisambiguation.cpp  RootFirstDisambiguation.h
src/AutoProcessor/Sentence/: SentenceAutoDisambiguator.cpp  SentenceAutoDisambiguator.h  TurkishSentenceAutoDisambiguator.cpp  TurkishSentenceAutoDisambiguator.h
