cmake_minimum_required(VERSION 3.12.3)
project(MorphologicalDisambiguation)

set(CMAKE_CXX_STANDARD 17)
include_directories(include)
link_directories(library)

add_library(MorphologicalDisambiguation DisambiguatedWord.cpp DisambiguatedWord.h DisambiguationCorpus.cpp DisambiguationCorpus.h AutoDisambiguator.h RootWordStatistics.cpp RootWordStatistics.h MorphologicalDisambiguator.h DummyDisambiguation.cpp DummyDisambiguation.h NaiveDisambiguation.cpp NaiveDisambiguation.h HmmDisambiguation.cpp HmmDisambiguation.h RootFirstDisambiguation.cpp RootFirstDisambiguation.h LongestRootFirstDisambiguation.cpp LongestRootFirstDisambiguation.h RootWordStatisticsDisambiguation.cpp RootWordStatisticsDisambiguation.h AutoDisambiguator.cpp)
add_executable(Test DisambiguatedWord.cpp DisambiguatedWord.h DisambiguationCorpus.cpp DisambiguationCorpus.h AutoDisambiguator.h RootWordStatistics.cpp RootWordStatistics.h MorphologicalDisambiguator.h DummyDisambiguation.cpp DummyDisambiguation.h NaiveDisambiguation.cpp NaiveDisambiguation.h HmmDisambiguation.cpp HmmDisambiguation.h RootFirstDisambiguation.cpp RootFirstDisambiguation.h LongestRootFirstDisambiguation.cpp LongestRootFirstDisambiguation.h RootWordStatisticsDisambiguation.cpp RootWordStatisticsDisambiguation.h AutoDisambiguator.cpp Test/RootWordStatisticsTest.cpp Test/DisambiguationCorpusTest.cpp Test/DummyDisambiguationTest.cpp Test/HmmDisambiguationTest.cpp Test/LongestRootFirstDisambiguationTest.cpp Test/RootFirstDisambiguationTest.cpp Test/RootWordStatisticsDisambiguationTest.cpp)

target_link_libraries(MorphologicalDisambiguation Dictionary MorphologicalAnalysis Corpus Math XmlParser)
target_link_libraries(Test Dictionary MorphologicalAnalysis Corpus Math XmlParser)