cmake_minimum_required(VERSION 3.12.3)
project(MorphologicalDisambiguation)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_FLAGS "-O3")

find_package(annotated_tree REQUIRED)
find_package(n_gram REQUIRED)

add_library(MorphologicalDisambiguation AutoDisambiguator.h MorphologicalDisambiguator.h DummyDisambiguation.cpp DummyDisambiguation.h NaiveDisambiguation.cpp NaiveDisambiguation.h HmmDisambiguation.cpp HmmDisambiguation.h RootFirstDisambiguation.cpp RootFirstDisambiguation.h LongestRootFirstDisambiguation.cpp LongestRootFirstDisambiguation.h AutoDisambiguator.cpp AutoProcessor/Sentence/SentenceAutoDisambiguator.cpp AutoProcessor/Sentence/SentenceAutoDisambiguator.h AutoProcessor/Sentence/TurkishSentenceAutoDisambiguator.cpp AutoProcessor/Sentence/TurkishSentenceAutoDisambiguator.h)
target_link_libraries(MorphologicalDisambiguation annotated_tree::annotated_tree n_gram::n_gram)
